# Dados_ifood

./: .gitignore  README.rst  main.py  pyproject.toml  result.py
pages/: elements.py  pages.py
tests/: test_dados_ifood.py
